// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> renders 1 item 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="List"
  >
    <Connect(ListItem)
      item={
        Object {
          "address": "Achterweg 22",
          "city": "Limmen",
          "name": "Brouwerij Dampegheest",
          "open": Array [
            "Friday",
            "Saturday",
            "Sunday",
          ],
          "zipcode": "1906 AG",
        }
      }
    />
  </div>,
  "nodes": Array [
    <div
      className="List"
    >
      <Connect(ListItem)
        item={
          Object {
            "address": "Achterweg 22",
            "city": "Limmen",
            "name": "Brouwerij Dampegheest",
            "open": Array [
              "Friday",
              "Saturday",
              "Sunday",
            ],
            "zipcode": "1906 AG",
          }
        }
      />
    </div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <List
        items={
          Array [
            Object {
              "address": "Achterweg 22",
              "city": "Limmen",
              "name": "Brouwerij Dampegheest",
              "open": Array [
                "Friday",
                "Saturday",
                "Sunday",
              ],
              "zipcode": "1906 AG",
            },
          ]
        }
      />,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": List {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "items": Array [
            Object {
              "address": "Achterweg 22",
              "city": "Limmen",
              "name": "Brouwerij Dampegheest",
              "open": Array [
                "Friday",
                "Saturday",
                "Sunday",
              ],
              "zipcode": "1906 AG",
            },
          ],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="List"
        >
          <Connect(ListItem)
            item={
              Object {
                "address": "Achterweg 22",
                "city": "Limmen",
                "name": "Brouwerij Dampegheest",
                "open": Array [
                  "Friday",
                  "Saturday",
                  "Sunday",
                ],
                "zipcode": "1906 AG",
              }
            }
          />
        </div>,
        "_debugID": 4,
        "_renderedOutput": <div
          className="List"
        >
          <Connect(ListItem)
            item={
              Object {
                "address": "Achterweg 22",
                "city": "Limmen",
                "name": "Brouwerij Dampegheest",
                "open": Array [
                  "Friday",
                  "Saturday",
                  "Sunday",
                ],
                "zipcode": "1906 AG",
              }
            }
          />
        </div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <List
    items={
      Array [
        Object {
          "address": "Achterweg 22",
          "city": "Limmen",
          "name": "Brouwerij Dampegheest",
          "open": Array [
            "Friday",
            "Saturday",
            "Sunday",
          ],
          "zipcode": "1906 AG",
        },
      ]
    }
  />,
}
`;

exports[`<List /> renders long list 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="List"
  >
    <Connect(ListItem)
      item={
        Object {
          "address": "Achterweg 22",
          "city": "Limmen",
          "name": "Brouwerij Dampegheest",
          "open": Array [
            "Friday",
            "Saturday",
            "Sunday",
          ],
          "zipcode": "1906 AG",
        }
      }
    />
    <Connect(ListItem)
      item={
        Object {
          "address": "Weverij 5",
          "city": "Amstelveen",
          "name": "de naeckte brouwers",
          "open": Array [
            "Wednesday",
          ],
          "zipcode": "1185 ZE",
        }
      }
    />
    <Connect(ListItem)
      item={
        Object {
          "address": "Overtocht 43",
          "city": "Bodegraven",
          "name": "Brouwerij de Molen",
          "open": Array [
            "Tuesday",
            "Wednesday",
            "Thursday",
            "Friday",
            "Saturday",
            "Sunday",
          ],
          "zipcode": "2411 BT",
        }
      }
    />
    <Connect(ListItem)
      item={
        Object {
          "address": "Flevoweg 35a",
          "city": "Leiden",
          "name": "Leidsch Bier",
          "open": Array [
            "Monday",
            "Tuesday",
            "Wednesday",
            "Thursday",
            "Friday",
          ],
          "zipcode": "2318 BX",
        }
      }
    />
    <Connect(ListItem)
      item={
        Object {
          "address": "Aelbrechtskolk 12",
          "city": "Rotterdam",
          "name": "Stadsbrouwerij De Pelgrim",
          "open": Array [
            "Monday",
            "Tuesday",
            "Wednesday",
            "Thursday",
            "Friday",
            "Saturday",
          ],
          "zipcode": "3024 RE",
        }
      }
    />
    <Connect(ListItem)
      item={
        Object {
          "address": "Guido Gezellelaan 49",
          "city": "Mechelen, België",
          "name": "Brouwerij Het Anker",
          "open": Array [
            "Tuesday",
            "Wednesday",
            "Thursday",
            "Friday",
          ],
          "zipcode": "2800",
        }
      }
    />
    <Connect(ListItem)
      item={
        Object {
          "address": "Funenkade 7",
          "city": "Amsterdam",
          "name": "Brouwerij 't IJ",
          "open": Array [
            "Tuesday",
            "Wednesday",
            "Thursday",
            "Friday",
          ],
          "zipcode": "1018 AL",
        }
      }
    />
    <Connect(ListItem)
      item={
        Object {
          "address": "Maar 2",
          "city": "Jabeek",
          "name": "Dorpsbrouwerij de Maar",
          "open": Array [
            "Tuesday",
            "Wednesday",
            "Thursday",
            "Friday",
            "Saturday",
          ],
          "zipcode": "6454 AM",
        }
      }
    />
    <Connect(ListItem)
      item={
        Object {
          "address": "Schilderweg 214",
          "city": "Oudeschild",
          "name": "Texelse Bierbrouwerij",
          "open": Array [
            "Thursday",
            "Friday",
            "Saturday",
          ],
          "zipcode": "1792 CK",
        }
      }
    />
    <Connect(ListItem)
      item={
        Object {
          "address": "Pratumplaats 2A",
          "city": "Utrecht (De Meern)",
          "name": "Maximus",
          "open": Array [
            "Wednesday",
            "Thursday",
            "Friday",
            "Saturday",
            "Sunday",
          ],
          "zipcode": "3454 NA",
        }
      }
    />
  </div>,
  "nodes": Array [
    <div
      className="List"
    >
      <Connect(ListItem)
        item={
          Object {
            "address": "Achterweg 22",
            "city": "Limmen",
            "name": "Brouwerij Dampegheest",
            "open": Array [
              "Friday",
              "Saturday",
              "Sunday",
            ],
            "zipcode": "1906 AG",
          }
        }
      />
      <Connect(ListItem)
        item={
          Object {
            "address": "Weverij 5",
            "city": "Amstelveen",
            "name": "de naeckte brouwers",
            "open": Array [
              "Wednesday",
            ],
            "zipcode": "1185 ZE",
          }
        }
      />
      <Connect(ListItem)
        item={
          Object {
            "address": "Overtocht 43",
            "city": "Bodegraven",
            "name": "Brouwerij de Molen",
            "open": Array [
              "Tuesday",
              "Wednesday",
              "Thursday",
              "Friday",
              "Saturday",
              "Sunday",
            ],
            "zipcode": "2411 BT",
          }
        }
      />
      <Connect(ListItem)
        item={
          Object {
            "address": "Flevoweg 35a",
            "city": "Leiden",
            "name": "Leidsch Bier",
            "open": Array [
              "Monday",
              "Tuesday",
              "Wednesday",
              "Thursday",
              "Friday",
            ],
            "zipcode": "2318 BX",
          }
        }
      />
      <Connect(ListItem)
        item={
          Object {
            "address": "Aelbrechtskolk 12",
            "city": "Rotterdam",
            "name": "Stadsbrouwerij De Pelgrim",
            "open": Array [
              "Monday",
              "Tuesday",
              "Wednesday",
              "Thursday",
              "Friday",
              "Saturday",
            ],
            "zipcode": "3024 RE",
          }
        }
      />
      <Connect(ListItem)
        item={
          Object {
            "address": "Guido Gezellelaan 49",
            "city": "Mechelen, België",
            "name": "Brouwerij Het Anker",
            "open": Array [
              "Tuesday",
              "Wednesday",
              "Thursday",
              "Friday",
            ],
            "zipcode": "2800",
          }
        }
      />
      <Connect(ListItem)
        item={
          Object {
            "address": "Funenkade 7",
            "city": "Amsterdam",
            "name": "Brouwerij 't IJ",
            "open": Array [
              "Tuesday",
              "Wednesday",
              "Thursday",
              "Friday",
            ],
            "zipcode": "1018 AL",
          }
        }
      />
      <Connect(ListItem)
        item={
          Object {
            "address": "Maar 2",
            "city": "Jabeek",
            "name": "Dorpsbrouwerij de Maar",
            "open": Array [
              "Tuesday",
              "Wednesday",
              "Thursday",
              "Friday",
              "Saturday",
            ],
            "zipcode": "6454 AM",
          }
        }
      />
      <Connect(ListItem)
        item={
          Object {
            "address": "Schilderweg 214",
            "city": "Oudeschild",
            "name": "Texelse Bierbrouwerij",
            "open": Array [
              "Thursday",
              "Friday",
              "Saturday",
            ],
            "zipcode": "1792 CK",
          }
        }
      />
      <Connect(ListItem)
        item={
          Object {
            "address": "Pratumplaats 2A",
            "city": "Utrecht (De Meern)",
            "name": "Maximus",
            "open": Array [
              "Wednesday",
              "Thursday",
              "Friday",
              "Saturday",
              "Sunday",
            ],
            "zipcode": "3454 NA",
          }
        }
      />
    </div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <List
        items={
          Array [
            Object {
              "address": "Achterweg 22",
              "city": "Limmen",
              "name": "Brouwerij Dampegheest",
              "open": Array [
                "Friday",
                "Saturday",
                "Sunday",
              ],
              "zipcode": "1906 AG",
            },
            Object {
              "address": "Weverij 5",
              "city": "Amstelveen",
              "name": "de naeckte brouwers",
              "open": Array [
                "Wednesday",
              ],
              "zipcode": "1185 ZE",
            },
            Object {
              "address": "Overtocht 43",
              "city": "Bodegraven",
              "name": "Brouwerij de Molen",
              "open": Array [
                "Tuesday",
                "Wednesday",
                "Thursday",
                "Friday",
                "Saturday",
                "Sunday",
              ],
              "zipcode": "2411 BT",
            },
            Object {
              "address": "Flevoweg 35a",
              "city": "Leiden",
              "name": "Leidsch Bier",
              "open": Array [
                "Monday",
                "Tuesday",
                "Wednesday",
                "Thursday",
                "Friday",
              ],
              "zipcode": "2318 BX",
            },
            Object {
              "address": "Aelbrechtskolk 12",
              "city": "Rotterdam",
              "name": "Stadsbrouwerij De Pelgrim",
              "open": Array [
                "Monday",
                "Tuesday",
                "Wednesday",
                "Thursday",
                "Friday",
                "Saturday",
              ],
              "zipcode": "3024 RE",
            },
            Object {
              "address": "Guido Gezellelaan 49",
              "city": "Mechelen, België",
              "name": "Brouwerij Het Anker",
              "open": Array [
                "Tuesday",
                "Wednesday",
                "Thursday",
                "Friday",
              ],
              "zipcode": "2800",
            },
            Object {
              "address": "Funenkade 7",
              "city": "Amsterdam",
              "name": "Brouwerij 't IJ",
              "open": Array [
                "Tuesday",
                "Wednesday",
                "Thursday",
                "Friday",
              ],
              "zipcode": "1018 AL",
            },
            Object {
              "address": "Maar 2",
              "city": "Jabeek",
              "name": "Dorpsbrouwerij de Maar",
              "open": Array [
                "Tuesday",
                "Wednesday",
                "Thursday",
                "Friday",
                "Saturday",
              ],
              "zipcode": "6454 AM",
            },
            Object {
              "address": "Schilderweg 214",
              "city": "Oudeschild",
              "name": "Texelse Bierbrouwerij",
              "open": Array [
                "Thursday",
                "Friday",
                "Saturday",
              ],
              "zipcode": "1792 CK",
            },
            Object {
              "address": "Pratumplaats 2A",
              "city": "Utrecht (De Meern)",
              "name": "Maximus",
              "open": Array [
                "Wednesday",
                "Thursday",
                "Friday",
                "Saturday",
                "Sunday",
              ],
              "zipcode": "3454 NA",
            },
          ]
        }
      />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": List {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "items": Array [
            Object {
              "address": "Achterweg 22",
              "city": "Limmen",
              "name": "Brouwerij Dampegheest",
              "open": Array [
                "Friday",
                "Saturday",
                "Sunday",
              ],
              "zipcode": "1906 AG",
            },
            Object {
              "address": "Weverij 5",
              "city": "Amstelveen",
              "name": "de naeckte brouwers",
              "open": Array [
                "Wednesday",
              ],
              "zipcode": "1185 ZE",
            },
            Object {
              "address": "Overtocht 43",
              "city": "Bodegraven",
              "name": "Brouwerij de Molen",
              "open": Array [
                "Tuesday",
                "Wednesday",
                "Thursday",
                "Friday",
                "Saturday",
                "Sunday",
              ],
              "zipcode": "2411 BT",
            },
            Object {
              "address": "Flevoweg 35a",
              "city": "Leiden",
              "name": "Leidsch Bier",
              "open": Array [
                "Monday",
                "Tuesday",
                "Wednesday",
                "Thursday",
                "Friday",
              ],
              "zipcode": "2318 BX",
            },
            Object {
              "address": "Aelbrechtskolk 12",
              "city": "Rotterdam",
              "name": "Stadsbrouwerij De Pelgrim",
              "open": Array [
                "Monday",
                "Tuesday",
                "Wednesday",
                "Thursday",
                "Friday",
                "Saturday",
              ],
              "zipcode": "3024 RE",
            },
            Object {
              "address": "Guido Gezellelaan 49",
              "city": "Mechelen, België",
              "name": "Brouwerij Het Anker",
              "open": Array [
                "Tuesday",
                "Wednesday",
                "Thursday",
                "Friday",
              ],
              "zipcode": "2800",
            },
            Object {
              "address": "Funenkade 7",
              "city": "Amsterdam",
              "name": "Brouwerij 't IJ",
              "open": Array [
                "Tuesday",
                "Wednesday",
                "Thursday",
                "Friday",
              ],
              "zipcode": "1018 AL",
            },
            Object {
              "address": "Maar 2",
              "city": "Jabeek",
              "name": "Dorpsbrouwerij de Maar",
              "open": Array [
                "Tuesday",
                "Wednesday",
                "Thursday",
                "Friday",
                "Saturday",
              ],
              "zipcode": "6454 AM",
            },
            Object {
              "address": "Schilderweg 214",
              "city": "Oudeschild",
              "name": "Texelse Bierbrouwerij",
              "open": Array [
                "Thursday",
                "Friday",
                "Saturday",
              ],
              "zipcode": "1792 CK",
            },
            Object {
              "address": "Pratumplaats 2A",
              "city": "Utrecht (De Meern)",
              "name": "Maximus",
              "open": Array [
                "Wednesday",
                "Thursday",
                "Friday",
                "Saturday",
                "Sunday",
              ],
              "zipcode": "3454 NA",
            },
          ],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="List"
        >
          <Connect(ListItem)
            item={
              Object {
                "address": "Achterweg 22",
                "city": "Limmen",
                "name": "Brouwerij Dampegheest",
                "open": Array [
                  "Friday",
                  "Saturday",
                  "Sunday",
                ],
                "zipcode": "1906 AG",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Weverij 5",
                "city": "Amstelveen",
                "name": "de naeckte brouwers",
                "open": Array [
                  "Wednesday",
                ],
                "zipcode": "1185 ZE",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Overtocht 43",
                "city": "Bodegraven",
                "name": "Brouwerij de Molen",
                "open": Array [
                  "Tuesday",
                  "Wednesday",
                  "Thursday",
                  "Friday",
                  "Saturday",
                  "Sunday",
                ],
                "zipcode": "2411 BT",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Flevoweg 35a",
                "city": "Leiden",
                "name": "Leidsch Bier",
                "open": Array [
                  "Monday",
                  "Tuesday",
                  "Wednesday",
                  "Thursday",
                  "Friday",
                ],
                "zipcode": "2318 BX",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Aelbrechtskolk 12",
                "city": "Rotterdam",
                "name": "Stadsbrouwerij De Pelgrim",
                "open": Array [
                  "Monday",
                  "Tuesday",
                  "Wednesday",
                  "Thursday",
                  "Friday",
                  "Saturday",
                ],
                "zipcode": "3024 RE",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Guido Gezellelaan 49",
                "city": "Mechelen, België",
                "name": "Brouwerij Het Anker",
                "open": Array [
                  "Tuesday",
                  "Wednesday",
                  "Thursday",
                  "Friday",
                ],
                "zipcode": "2800",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Funenkade 7",
                "city": "Amsterdam",
                "name": "Brouwerij 't IJ",
                "open": Array [
                  "Tuesday",
                  "Wednesday",
                  "Thursday",
                  "Friday",
                ],
                "zipcode": "1018 AL",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Maar 2",
                "city": "Jabeek",
                "name": "Dorpsbrouwerij de Maar",
                "open": Array [
                  "Tuesday",
                  "Wednesday",
                  "Thursday",
                  "Friday",
                  "Saturday",
                ],
                "zipcode": "6454 AM",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Schilderweg 214",
                "city": "Oudeschild",
                "name": "Texelse Bierbrouwerij",
                "open": Array [
                  "Thursday",
                  "Friday",
                  "Saturday",
                ],
                "zipcode": "1792 CK",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Pratumplaats 2A",
                "city": "Utrecht (De Meern)",
                "name": "Maximus",
                "open": Array [
                  "Wednesday",
                  "Thursday",
                  "Friday",
                  "Saturday",
                  "Sunday",
                ],
                "zipcode": "3454 NA",
              }
            }
          />
        </div>,
        "_debugID": 2,
        "_renderedOutput": <div
          className="List"
        >
          <Connect(ListItem)
            item={
              Object {
                "address": "Achterweg 22",
                "city": "Limmen",
                "name": "Brouwerij Dampegheest",
                "open": Array [
                  "Friday",
                  "Saturday",
                  "Sunday",
                ],
                "zipcode": "1906 AG",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Weverij 5",
                "city": "Amstelveen",
                "name": "de naeckte brouwers",
                "open": Array [
                  "Wednesday",
                ],
                "zipcode": "1185 ZE",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Overtocht 43",
                "city": "Bodegraven",
                "name": "Brouwerij de Molen",
                "open": Array [
                  "Tuesday",
                  "Wednesday",
                  "Thursday",
                  "Friday",
                  "Saturday",
                  "Sunday",
                ],
                "zipcode": "2411 BT",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Flevoweg 35a",
                "city": "Leiden",
                "name": "Leidsch Bier",
                "open": Array [
                  "Monday",
                  "Tuesday",
                  "Wednesday",
                  "Thursday",
                  "Friday",
                ],
                "zipcode": "2318 BX",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Aelbrechtskolk 12",
                "city": "Rotterdam",
                "name": "Stadsbrouwerij De Pelgrim",
                "open": Array [
                  "Monday",
                  "Tuesday",
                  "Wednesday",
                  "Thursday",
                  "Friday",
                  "Saturday",
                ],
                "zipcode": "3024 RE",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Guido Gezellelaan 49",
                "city": "Mechelen, België",
                "name": "Brouwerij Het Anker",
                "open": Array [
                  "Tuesday",
                  "Wednesday",
                  "Thursday",
                  "Friday",
                ],
                "zipcode": "2800",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Funenkade 7",
                "city": "Amsterdam",
                "name": "Brouwerij 't IJ",
                "open": Array [
                  "Tuesday",
                  "Wednesday",
                  "Thursday",
                  "Friday",
                ],
                "zipcode": "1018 AL",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Maar 2",
                "city": "Jabeek",
                "name": "Dorpsbrouwerij de Maar",
                "open": Array [
                  "Tuesday",
                  "Wednesday",
                  "Thursday",
                  "Friday",
                  "Saturday",
                ],
                "zipcode": "6454 AM",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Schilderweg 214",
                "city": "Oudeschild",
                "name": "Texelse Bierbrouwerij",
                "open": Array [
                  "Thursday",
                  "Friday",
                  "Saturday",
                ],
                "zipcode": "1792 CK",
              }
            }
          />
          <Connect(ListItem)
            item={
              Object {
                "address": "Pratumplaats 2A",
                "city": "Utrecht (De Meern)",
                "name": "Maximus",
                "open": Array [
                  "Wednesday",
                  "Thursday",
                  "Friday",
                  "Saturday",
                  "Sunday",
                ],
                "zipcode": "3454 NA",
              }
            }
          />
        </div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <List
    items={
      Array [
        Object {
          "address": "Achterweg 22",
          "city": "Limmen",
          "name": "Brouwerij Dampegheest",
          "open": Array [
            "Friday",
            "Saturday",
            "Sunday",
          ],
          "zipcode": "1906 AG",
        },
        Object {
          "address": "Weverij 5",
          "city": "Amstelveen",
          "name": "de naeckte brouwers",
          "open": Array [
            "Wednesday",
          ],
          "zipcode": "1185 ZE",
        },
        Object {
          "address": "Overtocht 43",
          "city": "Bodegraven",
          "name": "Brouwerij de Molen",
          "open": Array [
            "Tuesday",
            "Wednesday",
            "Thursday",
            "Friday",
            "Saturday",
            "Sunday",
          ],
          "zipcode": "2411 BT",
        },
        Object {
          "address": "Flevoweg 35a",
          "city": "Leiden",
          "name": "Leidsch Bier",
          "open": Array [
            "Monday",
            "Tuesday",
            "Wednesday",
            "Thursday",
            "Friday",
          ],
          "zipcode": "2318 BX",
        },
        Object {
          "address": "Aelbrechtskolk 12",
          "city": "Rotterdam",
          "name": "Stadsbrouwerij De Pelgrim",
          "open": Array [
            "Monday",
            "Tuesday",
            "Wednesday",
            "Thursday",
            "Friday",
            "Saturday",
          ],
          "zipcode": "3024 RE",
        },
        Object {
          "address": "Guido Gezellelaan 49",
          "city": "Mechelen, België",
          "name": "Brouwerij Het Anker",
          "open": Array [
            "Tuesday",
            "Wednesday",
            "Thursday",
            "Friday",
          ],
          "zipcode": "2800",
        },
        Object {
          "address": "Funenkade 7",
          "city": "Amsterdam",
          "name": "Brouwerij 't IJ",
          "open": Array [
            "Tuesday",
            "Wednesday",
            "Thursday",
            "Friday",
          ],
          "zipcode": "1018 AL",
        },
        Object {
          "address": "Maar 2",
          "city": "Jabeek",
          "name": "Dorpsbrouwerij de Maar",
          "open": Array [
            "Tuesday",
            "Wednesday",
            "Thursday",
            "Friday",
            "Saturday",
          ],
          "zipcode": "6454 AM",
        },
        Object {
          "address": "Schilderweg 214",
          "city": "Oudeschild",
          "name": "Texelse Bierbrouwerij",
          "open": Array [
            "Thursday",
            "Friday",
            "Saturday",
          ],
          "zipcode": "1792 CK",
        },
        Object {
          "address": "Pratumplaats 2A",
          "city": "Utrecht (De Meern)",
          "name": "Maximus",
          "open": Array [
            "Wednesday",
            "Thursday",
            "Friday",
            "Saturday",
            "Sunday",
          ],
          "zipcode": "3454 NA",
        },
      ]
    }
  />,
}
`;
